@@ -205,14 +205,23 @@ class Metrics (Extension):
                 printdbg(relative_path)
 
                 # Measure files
-                loc, sloc, lang = self.__measureFile(relative_path,revision,repobj,tmpdir)
-
-                # Write everything
-                query =  'INSERT INTO metrics (file_id, commit_id, loc, sloc, lang) '
-                query += 'VALUES ("%s","%s","%s","%s","%s")' % (str(file_id), str(commit_id), 
-                                                                str(loc), str(sloc), str(lang))
+                measures = self.__measureFile(relative_path,revision,repobj,tmpdir)
+                
+                # Create SQL Query insert
+                fields = []
+                values = []
+                for key in measures.keys():
+                    fields.append("%s" % str(key))
+                    if key == 'lang':
+                        values.append("'%s'" % str(measures[key]))
+                    else:
+                        values.append("%s" % str(measures[key]))
+                fields = ','.join(fields)
+                values = ','.join(values)
+                
+                query =  'INSERT INTO metrics '
+                query += '(%s) VALUES (%s)' % (fields, values)
                 write_cursor.execute(query)
-
                 rs = read_cursor.fetchone()
 
             # Write everything related to this repo
@@ -257,14 +266,44 @@ class Metrics (Extension):
             
         checkout_path = os.path.join(outputdir,filepath)
 
+        # Initialize measures
+        measures = {
+                    'lang'           : 'unknown',
+                    'loc'            : -1,
+                    'sloc'           : -1,
+                    'ncomment'       : -1,
+                    'lcomment'       : -1,
+                    'lblank'         : -1,
+                    'nfunctions'     : -1,
+                    'mccabe_max'     : -1,
+                    'mccabe_min'     : -1,
+                    'mccabe_sum'     : -1,
+                    'mccabe_mean'    : -1,
+                    'mccabe_median'  : -1,
+                    'halstead_length': -1,
+                    'halstead_vol'   : -1,
+                    'halstead_level' : -1,
+                    'halstead_md'    : -1,
+                    }
+            
         try:
-            loc = self.__getLOC(checkout_path)
-            sloc, lang = self.__getSLOCLang(checkout_path)
-        except IOError:
-            # File does not exist (moved or deleted)
-            pass
-
-        return loc,sloc,lang
+            measures['loc'] = self.__getLOC(checkout_path)
+        except Exception, e:
+            printdbg('Error loc. Exception: %s' % str(e))
+            
+        try:
+            measures['sloc'], measures['lang'] = self.__getSLOCLang(checkout_path)        
+        except Exception, e:
+            printdbg('Error sloc. Exception: %s' % str(e))
+            
+        try:
+            if measures['lang'] == 'ansic':
+                cmetrics = self.__getCMetrics(checkout_path)
+                measures.update(cmetrics)
+        except Exception, e:
+            printdbg('Error cmetrics. Exception: %s' % str(e))
+            
+        return measures
 
     def __getLOC(self,filename):
         """Measures LOC using Python file functions"""
@@ -291,6 +330,106 @@ class Metrics (Extension):
         
         return sloc, lang
 
-    
-register_extension("Metrics",Metrics)
+    def __get_CMetrics(self,filename):
+        """Measures McCabe's complexity, Halstead's complexity,
+        comment and blank lines, using the 'metrics' package by Brian
+        Renaud, stored in the Libresoft's subversion repository."""
         
+        # This package contains three different tools
+        # kdsi, hasltead and mccabe
+
+        # Running kdsi
+        kdsicmd = "kdsi "+filename
+        outputtext = commands.getoutput(kdsicmd)
+        # Get rid of all the spaces and get a list
+        output_values = [x for x in outputtext.split(' ') if '' != x]
+        # sloc will be ignored, but it is also generated by the tool
+        sloc,blank_lines,comment_lines,comment_number,filename = output_values
+
+        # Running halstead
+        halsteadcmd = "halstead "+filename
+        outputtext = commands.getoutput(halsteadcmd)
+        values = outputtext.split('\t')
+        try:
+            filename, halstead_length, halstead_volume, halstead_level, halstead_md = values
+        except ValueError:
+            halstead_length = -1
+            halstead_volume = -1
+            halstead_level = -1
+            halstead_md = -1
+
+        # Running mccabe
+        mccabecmd = "mccabe "+filename
+        # The output of this tool is multiline (one line per function)
+        outputlines = commands.getoutput(mccabecmd).split('\n')
+        mccabe_total = 0
+        mccabe_values = []
+        mccabe = 0
+        returns = 0
+        nfunctions = 0
+        for l in outputlines:
+            values = l.split('\t')
+            mccabe_ok = False
+            try:
+                if 4 == len(values):
+                    mccabe = int(values[-2])
+                    nfunctions += 1
+                    mccabe_ok = True
+                else:
+                    mccabe = -1
+            except ValueError:
+                # If values[-2] or values[-1] is not actually a number
+                mccabe = 0
+                nfunctions -= 1
+                mccabe_ok = False
+
+            if mccabe_ok:
+                mccabe_values.append(mccabe)
+
+        # There is a mccabe value for each function
+        # This calculates some summary statistics for that set of
+        # values
+                
+        mccabe_sum = sum(mccabe_values)
+        if 1 <= nfunctions:
+            mccabe_mean = mccabe_sum / nfunctions
+        else:
+            mccabe_mean = -1
+            
+        mccabe_min = min(mccabe_values)
+        mccabe_max = max(mccabe_values)
+
+        # Calculate median
+        mccabe_values.sort()
+        if 1 == nfunctions:
+            mccabe_median = mccabe_mean
+        elif 2 <= nfunctions:
+            if nfunctions & 1:
+                mccabe_median = mccabe_values[n // 2]
+            else:
+                mccabe_median = (mccabe_values[n // 2 - 1] + mccabe_values[n // 2]) / 2
+        else:
+            mccabe_median = -1
+        
+        # Everything finished
+        # Let's return all the needed values
+        values = {
+                  'lblank'          : blank_lines,
+                  'lcomment'        : comment_lines,
+                  'ncomment'        : comment_number,
+                  'halstead_length' : halstead_length,
+                  'halstead_vol'    : halstead_volume,
+                  'halstead_level'  : halstead_level,
+                  'halstead_md'     : halstead_md,
+                  'mccabe_sum'      : mccabe_sum,
+                  'mccabe_min'      : mccabe_min,
+                  'mccabe_max'      : mccabe_max,
+                  'mccabe_mean'     : mccabe_mean,
+                  'mccabe_median'   : mccabe_median,
+                  'nfunctions'      : nfunctions,
+                  }
+
+        return values
+
+    
+register_extension("Metrics",Metrics)        
